--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
   },
   "homepage": "https://github.com/jpah2020/Node-Express-Handlebars#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.1.0",
+    "handlebars": "^4.7.6",
     "inquirer": "^7.3.3",
-    "mysql": "^2.18.1"
+    "method-override": "^3.0.0",
+    "mysql": "^2.18.1",
+    "path": "^0.12.7"
   }
 }
